syntax = "proto3";
package serivces;

option go_package = "./proto/storage;storage";


message FileUploadRequest {
  string filename =1;
  bytes data = 2;
}

message FileDetailResponse {
  string id = 1;
  string path = 2;
  string mimeType  =3;
  string extension  =4;
  int64 size =5;
}

message FileQueryRequest {
  string id = 1;
}

// message FileQueryResponse {

// }

service StorageService {
  rpc UploadFile(stream FileUploadRequest) returns (FileDetailResponse){}
  rpc GetFileDetail(FileQueryRequest) returns(FileDetailResponse){}
}